--- a/notes/references.bib
+++ b/notes/references.bib
@@ -1093,6 +1093,17 @@
 	abstract = "The representation degeneration problem in Contextual Word Representations (CWRs) hurts the expressiveness of the embedding space by forming an anisotropic cone where even unrelated words have excessively positive correlations. Existing techniques for tackling this issue require a learning process to re-train models with additional objectives and mostly employ a global assessment to study isotropy. Our quantitative analysis over isotropy shows that a local assessment could be more accurate due to the clustered structure of CWRs. Based on this observation, we propose a local cluster-based method to address the degeneration issue in contextual embedding spaces. We show that in clusters including punctuations and stop words, local dominant directions encode structural information, removing which can improve CWRs performance on semantic tasks. Moreover, we find that tense information in verb representations dominates sense semantics. We show that removing dominant directions of verb representations can transform the space to better suit semantic applications. Our experiments demonstrate that the proposed cluster-based method can mitigate the degeneration problem on multiple tasks.",
 }
 
+@article{wang2021sentimentconcept,
+	author={Wang, Yabing and Huang, Guimin and Li, Jun and Li, Hui and Zhou, Ya and Jiang, Hua},
+	journal={IEEE Access}, 
+	title={Refined Global Word Embeddings Based on Sentiment Concept for Sentiment Analysis}, 
+	year={2021},
+	volume={9},
+	number={},
+	pages={37075-37085},
+	doi={10.1109/ACCESS.2021.3062654}}
+
+
 @book {carlsson2022topologicaldataanalysis,
 	AUTHOR = {Carlsson, Gunnar and Vejdemo-Johansson, Mikael},
 	TITLE = {Topological data analysis with applications},
